Fix header layout on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
 
     display: grid;
     grid-template-columns: max-content minmax(600px, 4fr);
-    grid-template-rows: 1fr 4.5fr;
+    grid-template-rows: min-content 4.5fr;
 }
 
 h1, h2, h3, h4 {
@@ -125,13 +125,13 @@ button {
     grid-column: 2 / -1;
     background-color: var(--alternate-bg-color);
     display: grid;
-    grid-template-columns: minmax(320px, 2fr) 1fr;
-    /*grid-template-rows: min-content max-content;*/
+    grid-template-columns: minmax(320px, 2fr) 1fr 1fr;
     align-items: center;
     filter: drop-shadow(2px 0 2px rgba(6, 7, 12, 0.2));
 }
 
 .search {
+    grid-column: 1 / 3;
     display: flex;
     padding: 1rem;
     justify-content: start;
@@ -148,6 +148,7 @@ button {
 
 .search__input {
     flex-grow: 1;
+    max-width: 520px;
     padding: 0.4rem 1rem;
     border: none;
     border-radius: 16px;
@@ -165,12 +166,14 @@ button {
 
 .notifications {
     font-size: 0;
+    flex: 0 0 1.5rem;
     width: 1.5rem;
     height: 1.5rem;
     background: url('./images/icons/notifications.svg') center center no-repeat;
 }
 
 .my-profile__picture {
+    flex: 0 0 2rem;
     width: 2rem;
     height: 2rem;
     object-position: center;
@@ -199,16 +202,30 @@ button {
 }
 
 .actions {
+    grid-column: span 2;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     padding: 1rem;
     gap: 1rem;
 }
 
+@media screen and (max-width: 970px) {
+    .greeting {
+        grid-column: span 2;
+    }
+
+    .actions {
+        grid-template-columns: 1fr;
+        grid-column: span 1;
+        justify-items: end;
+    }
+}
+
 .action {
     background-color: var(--main-color);
     color: var(--alternate-bg-color);
     min-width: 100px;
+    max-width: 150px;
     font-weight: bold;
     padding: 0.5rem 1rem;
     border-radius: 14px;
